--- a/src/static/physics.css
+++ b/src/static/physics.css
@@ -22,6 +22,7 @@
 }
 
 .card h3 {
+    margin-top: 1rem;
     font-size: 2rem;
     width: 90%;
 }
@@ -43,6 +44,7 @@
 
 .card-grid {
     display: grid;
+    place-items: center;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 1.5rem;
 }
@@ -83,56 +85,95 @@
 }
 
 .ti-disclaimer {
-  margin: 4rem;
-
+  padding: 2rem;
+  background-color: #1E202D;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
+
 .ti-disclaimer p {
   font-size: 1rem;
+  max-width: 60rem;
   align-items: center;
   color:white;
-  font-family:'Times New Roman', Times, serif;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  line-height: 2rem;
 }
 
-.ti-instructions-section {
-    background-color:white;
-    height: auto;
-    width: 100%;
+.ti-disclaimer a {
+    color: #03ce69;
+}
+
+.ti-disclaimer a:hover {
+    color: #00ab55;
+}
+
+.ti-disclaimer h1 {
+    color: white;
+    text-align: center;
+    font-size: 4rem;
+}
+
+iframe {
+    width: 40rem;
+    height: 23rem;
 }
 
 .ti-instructions {
-  margin-top: 1rem;
-  margin-bottom: 0rem;
-  margin-left: 4rem;
-  margin-right: 4rem;
-}
-
-.ti-instructions h4 {
-  font-size:1.5rem;
-  margin-bottom: 1rem;
-  text-align: center;
-}
-.ti-instructions p {
-  font-size: 1rem;
-}
-
-.ti-instructions li {
-  font-size: 1.2rem;
-  position: center;
-  text-align: center;
-  align-content: center;
+  margin: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  align-self: center;
+  justify-content: center;
 }
 
-ul {
-  list-style: none;
-  flex-wrap: wrap;
-  padding: 0;
-  justify-content: center;
-  text-align: center;
+.ti-instructions h1 {
+    font-size:5rem;
+    margin-bottom: 1rem;
+    text-align: center;
+    line-height: 2rem;
+}
+
+.ti-instructions h3 {
+    margin: 0.5rem 0rem;
+    font-size: 3rem;
+    text-align: center;
+    line-height: 1.5rem;
+}
+
+.ti-instructions p {
+    font-size: 1rem;
+    padding: 1rem 0rem;
+    max-width: 40rem;
+    text-align: center;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+.ti-instructions a {
+    color: #03ce69;
+}
+
+.ti-instructions a:hover {
+    color: #00ab55;
 }
 
 @media (max-width:1500px) {
+    .ti-disclaimer h1 {
+        font-size: 3rem;
+    }
+    iframe {
+        width: 80vw;
+        height: 45vw;
+    }
+    .ti-instructions h1 {
+        font-size:3rem;
+    }
+    .ti-instructions h3 {
+        font-size: 2rem;
+    }
     .content-wrapper {
         align-items: center;
         text-align: center;
@@ -143,7 +184,7 @@ ul {
         font-size: clamp(2.5rem, 7.5vw, 100rem);
     }
     .card h3 {
-        font-size: 2vw;
+        font-size: 3vw;
         width: 90%;
     }
     .card p {
@@ -157,9 +198,18 @@ ul {
     .card {
         width: 45vw;
     }
+    .ti-instructions h4 {
+        font-size:8vw;
+    }
 }
 
 @media (max-width:1000px) {
+    .ti-instructions h1 {
+        font-size:2rem;
+    }
+    .ti-instructions h3 {
+        font-size: 1.4rem;
+    }
     .card-grid {
         grid-template-columns: 1fr;
     }
@@ -167,7 +217,7 @@ ul {
         width: 90vw;
     }
     .card h3 {
-        font-size: 2vw;
+        font-size: 5vw;
         width: 90%;
     }
     .card p {
