--- a/src/templates/TIconverters.html
+++ b/src/templates/TIconverters.html
@@ -9,7 +9,7 @@
 			</h1>
 
 			<div class="card-grid">
-				<a target="_blank" href="../static/tizip/RPMCONRPS.zip" download="RPMCONRPS.zip">
+				<a target="_blank" href="../static/tizip/RPMCONRPS.zip" download="..static/tizip/RPMCONRPS.zip">
 					<div class="card">
 						<h3 class="card-header">Convert Rotations Per Minute to Radians Per Second</h3>
 						<p>RPMCONRPS</p>
@@ -19,7 +19,7 @@
 							rotations per minute.</p>
 					</div>
 				</a>
-				<a target="_blank" href="../static/tizip/AUCON.zip" download="AUCON.zip">
+				<a target="_blank" href="../static/tizip/AUCON.zip" download="..static/tizip/AUCON.zip">
 					<div class="card">
 						<h3 class="card-header">Convert an Orbital Meter Radius to an Astronomical Unit Radius</h3>
 						<p>AUCON</p>
