--- a/src/templates/TIgeometry.html
+++ b/src/templates/TIgeometry.html
@@ -9,7 +9,7 @@
 			</h1>
 
 			<div class="card-grid">
-				<a target="_blank" href="../static/tizip/DISTANCE.zip" download="/DISTANCE.zip">
+				<a target="_blank" href="../static/tizip/DISTANCE.zip" download="DISTANCE.zip">
 					<div class="card">
 						<h3 class="card-header">Distance Formula for Finding Distance Between Two Points</h3>
 						<p>DISTANCE</p>
@@ -28,7 +28,7 @@
 							known points. </p>
 					</div>
 				</a>
-				<a target="_blank" href="../static/tizip/QDRACTIC.zip" download="../static/tizip/QDRATIC.zip">
+				<a target="_blank" href="../static/tizip/QDRACTIC.zip" download="QDRATIC.zip">
 					<div class="card">
 						<h3 class="card-header">Quadractic Formula for Finding the Zeroes of a Quadractic Binomial</h3>
 						<p>QDRACTIC</p>
@@ -64,12 +64,12 @@
 			<a rel="noreferrer" target="_blank" href="https://education.ti.com/en/products/computer-software/ti-connect-sw"> TI Connect Software.
 			</a> Obtain a <a rel="noreferrer" target="_blank" href="https://education.ti.com/en/products/accessories/connectivity-kit">TI link cable</a>
 			or standard USB Mini Type A to USB Type Mini B. Then follow the step by step instructions after
-			unzipping the file. For <a target="_blank" href="../static/tizip/TIConnectMAC-SendFiles.pdf" download="../static/tizip/TIConnectMAC-SendFiles.pdf">Macintosh</a> or 
-			<a target="_blank" href="../static/tizip/TIConnectPC-SendFiles.pdf" download="../static/tizip/TIConnectPC-SendFiles.pdf">PC</a>
+			unzipping the file. For <a target="_blank" href="../static/tizip/TIConnectMAC-SendFiles.pdf" download="TIConnectMAC-SendFiles.pdf">Macintosh</a> or 
+			<a target="_blank" href="../static/tizip/TIConnectPC-SendFiles.pdf" download="TIConnectPC-SendFiles.pdf">PC</a>
 		</p>
 		<h3>Manually Programming Your Calculator</h3>
 		<p>You can manually program the files with basic key knowledge found 
-			<a target="_blank" href="../static/tizip/TIProgrammingGuide.pdf" download="..static/tizip/TIProgrammingGuide.pdf">in this guide.</a> You will still need to download the TI Connect or Connect CE Software to view the files.
+			<a target="_blank" href="../static/tizip/TIProgrammingGuide.pdf" download="TIProgrammingGuide.pdf">in this guide.</a> You will still need to download the TI Connect or Connect CE Software to view the files.
 		</p>
 	</section>
 
