--- a/src/templates/join.html
+++ b/src/templates/join.html
@@ -10,8 +10,8 @@
                     <a target="_blank" rel="noreferrer" href="https://discord.gg/7eZP2YPBsD"><button class="discord-button">Discord</button></a>
                 </div>
                 <div class="card">
-                    <img src="https://en.m.wikipedia.org/wiki/File:Google_Forms_2020_Logo.svg" alt="Form Icon" class="icon">
-                    <a target="_blank" rel="noreferrer" href="https://docs.google.com/forms/d/e/1FAIpQLSdu1Q00zfjBQ-ThORh15eThHM-KZmacxzoM5bpIz6lziT3tvg/viewform?usp=sf_link"><button class="form-button">Registration</button></a>
+                    <img src="" alt="Form Icon" class="icon">
+                    <a target="_blank" rel="noreferrer" href="../static/Images/googleform.png"><button class="form-button">Registration</button></a>
                 </div>
             </div>
         </div>
